objects/GiftCommitment.object
<CustomObject>
    <fields>
        <fullName>DEMO_Today_s_Date__c</fullName>
        <label>DEMO Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Percentage_Amount__c</fullName>
        <description>% Amount</description>
        <label>Expected Percentage Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinDock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FinDock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NGO_Irrevocable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Irrevocable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Soft_Credit_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Soft Credit Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift Commitments</relationshipLabel>
        <relationshipName>Gift_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Gift_Commitment</fullName>
        <active>true</active>
        <label>Gift Commitment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Planned_Gift_Bequest_RecordType</fullName>
        <active>true</active>
        <label>Planned Gift - Bequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Pledge_RecordType</fullName>
        <active>true</active>
        <label>Pledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Recurring_Gift_RecordType</fullName>
        <active>true</active>
        <label>Recurring Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planned_Gift</fullName>
        <active>true</active>
        <label>Planned Gift</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>